--- a/site/data/sidebar.yml
+++ b/site/data/sidebar.yml
@@ -6,17 +6,12 @@
   icon_color: indigo
   pages:
     - title: Introduction
-    - title: Download
-    - title: Contents
     - title: Browsers & devices
     - title: JavaScript
-    - title: Webpack
-    - title: Parcel
-    - title: Vite
+    # - title: Vite
     - title: Accessibility
     - title: RFS
     - title: RTL
-    - title: Contribute
 
 - title: Customize
   icon: palette2
@@ -145,10 +140,6 @@
   icon: globe2
   icon_color: indigo
   pages:
-    - title: Overview
-    - title: Team
-    - title: Brand
-    - title: License
     - title: Translations
 
 - title: Migration
