--- a/site/data/sidebar.yml
+++ b/site/data/sidebar.yml
@@ -134,6 +134,8 @@
   icon_color: blue
   pages:
     - title: Approach
+    - title: Tovuti Theme
+    - title: Action Bar
     - title: Icons
 
 - title: About
