from mac mini to tovuti hp

--- a/site/data/sidebar.yml
+++ b/site/data/sidebar.yml
@@ -136,6 +136,7 @@
     - title: Approach
     - title: Tovuti Theme
     - title: Action Bar
+    - title: Empty States
     - title: Icons
 
 - title: About
