empty states had extra S in title.

--- a/site/data/sidebar.yml
+++ b/site/data/sidebar.yml
@@ -18,7 +18,7 @@
   icon_color: orange
   pages:
     - title: Action Bar
-    - title: Empty Statess
+    - title: Empty States
     - title: Brand
 
 - title: Lesson Activity
