--- a/site/data/colors.yml
+++ b/site/data/colors.yml
@@ -24,3 +24,11 @@
   hex: "#6c757d"
 - name: gray-dark
   hex: "#343a40"
+- name: brand
+  hex: "#1e2935"
+- name: brand-light
+  hex: "#374151"
+- name: brand-white
+  hex: "#ffffff"
+- name: cta
+  hex: "#007287"
