--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bootstrap",
   "description": "The most popular front-end framework for developing responsive, mobile first projects on the web.",
   "version": "5.2.2",
+  "type": "module",
   "config": {
     "version_short": "5.2"
   },
@@ -108,10 +109,10 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.20.2",
     "@popperjs/core": "^2.11.6",
-    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
     "autoprefixer": "^10.4.12",
     "bundlewatch": "^0.3.3",
     "clean-css-cli": "^5.6.1",
@@ -121,7 +122,7 @@
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-unicorn": "^44.0.0",
+    "eslint-plugin-unicorn": "^45.0.2",
     "find-unused-sass-variables": "^4.0.4",
     "globby": "^13.1.2",
     "hammer-simulator": "0.0.1",
@@ -129,26 +130,26 @@
     "ip": "^2.0.0",
     "jquery": "^3.6.1",
     "karma": "^6.4.1",
-    "karma-browserstack-launcher": "1.4.0",
+    "karma-browserstack-launcher": "1.6.0",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-detect-browsers": "^2.3.3",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "karma-rollup-preprocessor": "7.0.7",
     "lockfile-lint": "^4.9.6",
+    "karma-rollup-preprocessor": "7.0.8",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.0.0",
     "rollup": "^2.79.1",
-    "rollup-plugin-istanbul": "^3.0.0",
+    "rollup-plugin-istanbul": "^4.0.0",
     "rtlcss": "^4.0.0",
     "sass": "^1.55.0",
     "shelljs": "^0.8.5",
     "stylelint": "^14.16.1",
-    "stylelint-config-twbs-bootstrap": "^6.0.0",
+    "stylelint-config-twbs-bootstrap": "^7.0.0",
     "terser": "^5.15.1",
     "vnu-jar": "22.9.29"
   },
